Couple of last minute cosmetics